--- a/themes/sphinx-bootstrap/layout.html
+++ b/themes/sphinx-bootstrap/layout.html
@@ -5,10 +5,10 @@
 {%- if url_root == '#' %}{% set url_root = '' %}{% endif %}
 
 {%- macro relbar(bottom=False) %}
-          <a class="brand" href="http://vixo.com">Vixo</a>
-          <a class="brand" href="http://blog.vixo.com">Blog</a>
-          <a class="brand" href="{{ pathto(master_doc) }}">Documentation</a>
-          <a class="brand" href="http://wordpress.vixo.com">WordPress Plugin</a>
+          <a class="brand" href="http://vixo.com?from=http://api.vixo.com">Vixo</a>
+          <a class="brand" href="http://blog.vixo.com?from=http://api.vixo.com">Blog</a>
+          <a class="brand" href="http://documentation.vixo.com?from=http://api.vixo.com">Documentation</a>
+          <a class="brand" href="http://wordpress.vixo.com?from=http://api.vixo.com">WordPress Plugin</a>
 {%- endmacro %}
 
 {%- macro navigation() %}
@@ -67,13 +67,14 @@
     {%- endif %}
 {%- endmacro -%}
 
-{%- macro seachbox() %}
+{%- macro searchbox() %}
     {%- if pagename != "search" %}
-        <form class="navbar-search" action="{{ pathto('search') }}"
+        <form class="navbar-search pull-right" action="{{ pathto('search') }}"
               method="get">
-            <input type="text" name="q" placeholder="search"/>
+            <input type="text" name="q" placeholder="search..." value="search..."/>
             <input type="hidden" name="check_keywords" value="yes"/>
             <input type="hidden" name="area" value="default"/>
+
         </form>
     {%- endif %}
 {%- endmacro -%}
@@ -166,41 +167,60 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
-  {% endif %}</head>
+  {% endif %}
+</head>
 <body>
+	<body>
 
-{%- block header %}
-    <div class="navbar">
-        <div class="navbar-inner">
-            <div class="container">
+		<header role="banner">
 
+			<div id="inner-header" class="clearfix">
+
+				<div class="navbar navbar-fixed-top">
+					<div class="navbar-inner">
+						<div class="container-fluid nav-container">
+                {%- block header %}
+  							<nav role="navigation">
                 {%- block relbar1 %}{{ relbar() }}{% endblock %}
-                <div class="pull-right">
-                    {{ seachbox() }}
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock %}
+	  						</nav>
+                  {{ searchbox() }}
+                {% endblock %}
+						</div>
+					</div>
+				</div>
 
-<div class="container">
+			</div> <!-- end #inner-header -->
+
+		</header> <!-- end header -->
+
+		<div class="container-fluid">
+
+			<div id="content" class="clearfix row-fluid">
+
+				<div id="main" class="span12 clearfix" role="main">
+          <header>
+					<div class="hero-unit">
+            <h1>Vixo API (for developers)</h1>
+            <p>Manipulating Vixo Spreadsheets With The Vixo API</p>
+            <p>
+              <a class="btn btn-primary btn-large" href="http://vixo.com">
+                Get Started »
+              </a>
+            </p>
+					</div>
+				</div>
+			</div>
+     </div>
+    </header>
+
+<div class="container-fluid">
 <div class="content">
 
 {%- block content %}
     {%- block sidebar1 %} {# possible location for sidebar #} {% endblock %}
-    <div class="page-header">
-      <h1>Vixo API</h1>
-      <p>Manipulating Vixo Spreadsheets With The Vixo API.</p>
-      <p>
-        <a class="btn btn-primary btn-large" href="http://vixo.com">
-          Get Started »
-        </a>
-      </p>
-    </div>
-    <div class="row">
+    <div class="row-fluid clearfix">
             {%- block document %}
                 <div class="span12">
-                    {{navigation()}}
                     {% block body %} {% endblock %}
                     {% if theme_disqus_shortname %}
                         <div id="disqus_thread"></div>
@@ -210,7 +230,6 @@
             {%- endblock %}
     </div>
 {%- endblock %}
-</div>
 
 {%- block footer %}
     <div class="footer">
@@ -235,13 +254,12 @@
                 {% trans sphinx_version=sphinx_version|e %}Created using <a
                         href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}
                     .{% endtrans %}
-        Get <a href="http://vixo.com?from=wordpress-book">the next generation spreadsheet</a> now!
+        Get <a href="http://vixo.com?from=http://api.vixo.com">the next generation spreadsheet</a> now!
                 </small>
                 </p>
             {%- endif %}
     </div>
 {%- endblock %}
-</div>
 
 {% if theme_disqus_shortname %}
     <!-- disqus -->
@@ -275,5 +293,6 @@
 
 <!-- twitter -->
 <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
-</body>
-</html>
+
+
+</body></html>
