--- a/themes/sphinx-bootstrap/layout.html
+++ b/themes/sphinx-bootstrap/layout.html
@@ -196,13 +196,14 @@
     <div class="row-fluid clearfix">
             {%- block document %}
                 <div class="span12">
-                    {% include "xxsales.html" %}
+                    <!-- {% include "xxsales.html" %} -->
                     {% block body %} {% endblock %}
                     {% if theme_disqus_shortname %}
                         <div id="disqus_thread"></div>
                         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                     {% endif %}
                 </div>
+                <div class='clearfix'> </div>
             {%- endblock %}
             {% include "xxcall_to_action.html" %}
     </div>
