--- a/themes/sphinx-bootstrap/xxhero.html
+++ b/themes/sphinx-bootstrap/xxhero.html
@@ -1,9 +1,9 @@
 <header>
 	<div class="hero-unit">
-    <h1>Vixo API (for developers)</h1>
-    <p>Manipulating Vixo Spreadsheets With The Vixo API</p>
+    <h1>Hypernumbers API (for developers)</h1>
+    <p>Manipulating Hypernumbers Spreadsheets With The Hypernumbers API</p>
     <p>
-      <a class="btn btn-primary btn-large" href="http://vixo.com">
+      <a class="btn btn-primary btn-large" href="http://hypernumbers.org">
         Get Started »
       </a>
     </p>
