tidy up and stuff

--- a/themes/sphinx-bootstrap/layout.html
+++ b/themes/sphinx-bootstrap/layout.html
@@ -164,7 +164,7 @@
 		<header role="banner">
 
 			<div id="inner-header" class="clearfix">
-
+        <!--
 				<div class="navbar navbar-fixed-top">
 					<div class="navbar-inner">
 						<div class="container-fluid nav-container">
@@ -177,7 +177,7 @@
 						</div>
 					</div>
 				</div>
-
+        -->
 			</div> <!-- end #inner-header -->
 
 		</header> <!-- end header -->
@@ -205,7 +205,7 @@
                 </div>
                 <div class='clearfix'> </div>
             {%- endblock %}
-            {% include "xxcall_to_action.html" %}
+            <!-- {% include "xxcall_to_action.html" %} -->
     </div>
 {%- endblock %}
 {%- block footer %}
